--- a/templates/master.html
+++ b/templates/master.html
@@ -10,46 +10,88 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
 
-
-	<!-- Brand and toggle get grouped for better mobile display -->
 	<div class="navbar-header">
-	  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-	  </button>
 	  <a class="navbar-brand" href="#">Pic of the Day</a>
 	</div>
 
 	<!-- Collect the nav links, forms, and other content for toggling -->
-	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	<div class="collapse navbar-collapse" id="top-nav
+						  ">
 	  <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Link</a></li>
+            <li><a href="#">Home</a></li>
 	  </ul>
 
 
 	  <ul class="nav navbar-nav navbar-right">
-<!--  search bar
+	    <!--  search bar
 
-	    <form class="navbar-form navbar-left">
-              <div class="form-group">
-		<input type="text" class="form-control" placeholder="Search">
-              </div>
-              <button type="submit" class="btn btn-default">Submit</button>
-	    </form>
--->
+		  <form class="navbar-form navbar-left">
+		    <div class="form-group">
+		      <input type="text" class="form-control" placeholder="Search">
+		    </div>
+		    <button type="submit" class="btn btn-default">Submit</button>
+		  </form>
+		  -->
+	    <li><a href="#">Profile</a></li>
             <li><a href="/logout">Logout</a></li>
 	  </ul>
 
-	</div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
+	</div>
+      </div>
     </nav>
 
+    
     <div class="container-fluid">
-      <h1>z</hz>
+
+      <div class="row">
+
+	<div class="col-md-3"></div>
+	<div class="col-md-3">
+
+	  <div class="panel panel-default">
+
+            <div class="panel-heading">
+              <h2 class="panel-title">Login</h2>
+            </div>
+
+            <div class="panel-body">
+              <form action="/login" method="POST">
+                <input name="username" type="text" class="form-control" placeholder="Username" required>
+                <br>
+                <input name="password" type="password" class="form-control" placeholder="Password" required>
+                <br>
+                <input type="submit" class="btn btn-primary" value="Login">
+              </form>
+            </div>
+
+          </div>
+
+	</div>
+
+	<div class="col-md-3">
+	  <div class="panel panel-default">
+	    <div class="panel-heading">
+              <h2 class="panel-title">Register</h2>
+            </div>
+            <div class="panel-body">
+              <form action="/register" method="POST">
+		<input name="username" type="text" class="form-control" placeholder="Username" required>
+		<br>
+		<input name="password" type="password" class="form-control" placeholder="Password" required>
+		<br>
+		<input name="confirm_password" type="password" class="form-control" placeholder="Confirm password" required>
+		<br>
+		<input type="submit" class="btn btn-primary" value="Register">
+              </form>
+	    </div>
+          </div>
+        </div>
+	
+	<div class="col-md-3"></div>
+
+      </div>
     </div>
+
 
 
 
