--- a/templates/logreg.html
+++ b/templates/logreg.html
@@ -1,6 +1,7 @@
 {% extends "master.html" %}
 
 {% block body %}
+<script src="static/js/logregdv.js"></script>
     <div class="container-fluid">
 
       <div class="row">
@@ -15,10 +16,10 @@
             </div>
 
             <div class="panel-body">
-              <form action="/login" method="POST">
-                <input name="username" type="text" class="form-control" placeholder="Username" required>
+              <form name="login" action="/login" method="POST">
+                <input name="username" type="text" class="form-control" placeholder="Username">
                 <br>
-                <input name="password" type="password" class="form-control" placeholder="Password" required>
+                <input name="password" type="password" class="form-control" placeholder="Password">
                 <br>
                 <input type="submit" class="btn btn-primary" value="Login">
               </form>
@@ -27,19 +28,18 @@
           </div>
 
 	</div>
-
 	<div class="col-md-3">
 	  <div class="panel panel-default">
 	    <div class="panel-heading">
               <h2 class="panel-title">Register</h2>
             </div>
             <div class="panel-body">
-              <form action="/register" method="POST">
-		<input name="username" type="text" class="form-control" placeholder="Username" required>
+              <form name="register" action="/register" onsubmit="return validateRegister()" method="POST">
+		<input name="username" type="text" class="form-control" placeholder="Username">
 		<br>
-		<input name="password" type="password" class="form-control" placeholder="Password" required>
+		<input name="password" type="password" class="form-control" placeholder="Password">
 		<br>
-		<input name="confirm_password" type="password" class="form-control" placeholder="Confirm password" required>
+		<input name="confirm_password" type="password" class="form-control" placeholder="Confirm password">
 		<br>
 		<input type="submit" class="btn btn-primary" value="Register">
               </form>
