--- a/templates/logreg.html
+++ b/templates/logreg.html
@@ -41,6 +41,8 @@
 		<br>
 		<input name="confirm_password" type="password" class="form-control" placeholder="Confirm password">
 		<br>
+		<div id="dverror"></div>
+		</br>
 		<input type="submit" class="btn btn-primary" value="Register">
               </form>
 	    </div>
