--- a/templates/logreg.html
+++ b/templates/logreg.html
@@ -2,55 +2,67 @@
 
 {% block body %}
 <script src="static/js/logregdv.js"></script>
-    <div class="container-fluid">
+<div class="container-fluid">
+  
+  <div class="row">
 
-      <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-3">
 
-	<div class="col-md-3"></div>
-	<div class="col-md-3">
+      <div class="panel panel-default">
 
-	  <div class="panel panel-default">
-
-            <div class="panel-heading">
-              <h2 class="panel-title">Login</h2>
-            </div>
-
-            <div class="panel-body">
-              <form name="login" action="/login" method="POST">
-                <input name="username" type="text" class="form-control" placeholder="Username">
-                <br>
-                <input name="password" type="password" class="form-control" placeholder="Password">
-                <br>
-                <input type="submit" class="btn btn-primary" value="Login">
-              </form>
-            </div>
-
-          </div>
-
-	</div>
-	<div class="col-md-3">
-	  <div class="panel panel-default">
-	    <div class="panel-heading">
-              <h2 class="panel-title">Register</h2>
-            </div>
-            <div class="panel-body">
-              <form name="register" action="/register" onsubmit="return validateRegister()" method="POST">
-		<input name="username" type="text" class="form-control" placeholder="Username">
-		<br>
-		<input name="password" type="password" class="form-control" placeholder="Password">
-		<br>
-		<input name="confirm_password" type="password" class="form-control" placeholder="Confirm password">
-		<br>
-		<div id="dverror"></div>
-		</br>
-		<input type="submit" class="btn btn-primary" value="Register">
-              </form>
-	    </div>
-          </div>
+        <div class="panel-heading">
+          <h2 class="panel-title">Login</h2>
         </div>
-	
-	<div class="col-md-3"></div>
+
+        <div class="panel-body">
+          <form name="login" action="/login" onsubmit="return validateLogin()" method="POST">
+            <input name="username" type="text" class="form-control" placeholder="Username">
+            <br>
+            <input name="password" type="password" class="form-control" placeholder="Password">
+            <br>
+	    <div id="loginerror" class="logreg-error">
+	      {% if loginmessage is defined %}
+	      {{ loginmessage }}
+	      <br>
+	      {% endif %}
+	      <br>
+	    </div>
+            <input type="submit" class="btn btn-primary" value="Login">
+          </form>
+        </div>
 
       </div>
+
     </div>
+    <div class="col-md-3">
+      <div class="panel panel-default">
+	<div class="panel-heading">
+          <h2 class="panel-title">Register</h2>
+        </div>
+        <div class="panel-body">
+          <form name="register" action="/register" onsubmit="return validateRegister()" method="POST">
+	    <input name="username" type="text" class="form-control" placeholder="Username">
+	    <br>
+	    <input name="password" type="password" class="form-control" placeholder="Password">
+	    <br>
+	    <input name="confirm_password" type="password" class="form-control" placeholder="Confirm password">
+	    <br>
+	    <div id="regerror" class="logreg-error">
+	      {% if regmessage is defined %}
+	      {{ regmessage }}
+	      <br>
+	      {% endif %}
+	    </div>
+	    <input type="submit" class="btn btn-primary" value="Register">
+          </form>
+	</div>
+      </div>
+    </div>
+    
+    <div class="col-md-3">
+    </div>
+
+  </div>
+</div>
 {% endblock %}
