--- a/templates/master.html
+++ b/templates/master.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap.css">
+    <link type="text/css" rel="stylesheet" href="/static/css/logreg.css">
     <title>{% block title %}{% endblock %}</title>
   </head>
 
