--- a/templates/logreg.html
+++ b/templates/logreg.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 
 {% block body %}
-<script src="static/js/logregdv.js"></script>
+
 <div class="container-fluid">
   
   <div class="row">
@@ -17,9 +17,9 @@
 
         <div class="panel-body">
           <form name="login" action="/login" onsubmit="return validateLogin()" method="POST">
-            <input name="username" type="text" class="form-control" placeholder="Username">
+            <input name="username" type="text" class="form-control" id="loginun" placeholder="Username">
             <br>
-            <input name="password" type="password" class="form-control" placeholder="Password">
+            <input name="password" type="password" class="form-control" id="loginpw" placeholder="Password">
             <br>
 	    <div id="loginerror" class="logreg-error">
 	      {% if loginmessage is defined %}
@@ -28,7 +28,7 @@
 	      {% endif %}
 	      <br>
 	    </div>
-            <input type="submit" class="btn btn-primary" value="Login">
+            <input type="submit" class="btn btn-primary" id="loginsubmit" value="Login">
           </form>
         </div>
 
@@ -54,7 +54,7 @@
 	      <br>
 	      {% endif %}
 	    </div>
-	    <input type="submit" class="btn btn-primary" value="Register">
+	    <input type="submit" class="btn btn-primary" id="regsubmit" value="Register">
           </form>
 	</div>
       </div>
@@ -65,4 +65,6 @@
 
   </div>
 </div>
+
+<script src="static/js/logregdv.js"></script>
 {% endblock %}
