--- a/templates/logreg.html
+++ b/templates/logreg.html
@@ -43,7 +43,9 @@
         <div class="panel-body">
           <form name="register" action="/register" onsubmit="return validateRegister()" method="POST">
 	    <input name="username" type="text" class="form-control" placeholder="Username">
+	    <div id="usernameTaken">
 	    <br>
+	    </div>
 	    <input name="password" type="password" class="form-control" placeholder="Password">
 	    <br>
 	    <input name="confirm_password" type="password" class="form-control" placeholder="Confirm password">
