--- a/templates/logreg.html
+++ b/templates/logreg.html
@@ -43,7 +43,7 @@
         <div class="panel-body">
           <form name="register" action="/register" onsubmit="return validateRegister()" method="POST">
 	    <input name="username" type="text" class="form-control" placeholder="Username">
-	    <div id="usernameTaken">
+	    <div id="usernameTaken" class="logreg-error">
 	    <br>
 	    </div>
 	    <input name="password" type="password" class="form-control" placeholder="Password">
