--- a/templates/master.html
+++ b/templates/master.html
@@ -3,6 +3,7 @@
   <head>
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap.css">
     <link type="text/css" rel="stylesheet" href="/static/css/logreg.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <title>{% block title %}{% endblock %}</title>
   </head>
 
