fixed a little. still kind of broken

--- a/templates/makepost.html
+++ b/templates/makepost.html
@@ -11,7 +11,7 @@
 	<span id="file-label">Browse</span> <input class="file" id="noot" name="files[]" type="file" style="display: none;"/>
       </label>
       <br><br>
-      <form action="/noot" method="POST" id="datform">
+      <form action="/upload" method="POST" id="datform">
 	<input id="lul" name="sneaky" type="hidden" value=""/>
 	<button class="btn btn-default" id="temporary" onclick="loadPhoto()">Load Photo</button>
       </form>
