--- a/templates/master.html
+++ b/templates/master.html
@@ -35,7 +35,9 @@
 		  </form>
 		  -->
 	    <li><a href="#">Profile</a></li>
+	    {% block logout %}
             <li><a href="/logout">Logout</a></li>
+	    {% endblock %}
 	  </ul>
 
 	</div>
