data/mississippi.db

--- a/templates/master.html
+++ b/templates/master.html
@@ -20,7 +20,8 @@
 	<div class="collapse navbar-collapse" id="top-nav
 						  ">
 	  <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
+	    <li><a href="/upload">Upload</a></li>
 	  </ul>
 
 
