--- a/templates/feed.html
+++ b/templates/feed.html
@@ -8,7 +8,7 @@
     <!--<div class="col-md-3"></div>-->
     <div class="col-md-6">
       {% for post in posts %}
-      <img class="img_fluid" src={{ post['photo_link'] }}; alt="I tried"><br>
+      <img class="img-responsive" src={{ post['photo_link'] }}; alt="I tried"><br>
       by {{ post['author'] }} on {{ post['upload_date'] }}<br>
       <i>{{ post['caption'] }}<i><br>
 
