--- a/templates/feed.html
+++ b/templates/feed.html
@@ -21,8 +21,8 @@
   <!-- for the page numbers -->
   <div class="row">
     <div class="col-md-12">
-      {{ lastPage }}
-      {{ nextPage }}
+      <a href="/page/{{ lastPage }}">{{ lastPage }}</a>
+      <a href="/page/{{ nextPage }}">{{ nextPage }}</a>
     </div>
   </div>
 
