--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -1,45 +1,4 @@
-body {
-    background-image: url("/static/img/landingbgd.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.overlay {
-    background-color: white;
-    opacity: 0.7;
-    position: fixed;
-    padding: 0;
-    margin: 0;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-}
-
-#content {
-    width: 100%;
-    position: absolute;
-    text-align: center;
-    margin-top: 20%;
-    font-family: "Sofia";
-}
-
-#name {
-    font-size: 48px;
-    padding: 5px;
-}
-
-.button {
-    background-color: #B3E5FC;
-    padding: 10px;
-}
-
-.button:hover {
-    cursor: pointer;
-}
-
 p {
-    width: 20%;
     margin: 0 auto;
     font-size: 20px;
     padding-top: 10px;
@@ -48,8 +7,6 @@ p {
 }
 
 a {
-    font-family: Arial;
-    padding: 10px;
     color: #565051;
 }
 
@@ -57,3 +14,72 @@ a:hover {
     color: #848482;
     text-decoration: none;
 }
+
+.row {
+    height: 100vh;
+    width: 100vw;
+}
+
+.overlay {
+    background-color: white;
+    opacity: 0.6;
+    position: fixed;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 10;
+}
+
+#p1 {
+    height: 100vh;
+    width: 100vw;
+    background-image: url("/static/img/landingbgd.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+#intro {
+    position: relative;
+    text-align: center;
+    font-family: "Sofia";
+    z-index: 20;
+}
+
+#name {
+    margin-top: 20%;
+    font-size: 48px;
+    padding: 5px;
+}
+
+#p2 {
+    height: 100vh;
+    width: 100vw;
+    background-image: url("/static/img/landingaboutbgd.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+#about {
+    position: relative;
+    z-index: 20;
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 20%;
+    font-family: "Arsenal";
+}
+
+.button {
+    background-color: #B3E5FC;
+    padding: 10px;
+
+}
+
+.button:hover {
+    cursor: pointer;
+}
+
