--- a/templates/logreg.html
+++ b/templates/logreg.html
@@ -15,10 +15,10 @@
 {% block body %}
 
 <div class="container-fluid">
-  {% if successreg is defined %}  
+  {% if successmsg is defined %}  
   <div class="row">
-    <div class="alert alert-success">
-      {{ successreg }}
+    <div class="alert alert-success" style="text-align: center">
+      {{ successmsg }}
     </div>
   </div>
   {% endif %}
