upload modal pop up

--- a/templates/logreg.html
+++ b/templates/logreg.html
@@ -1,15 +1,7 @@
 {% extends "master.html" %}
 
-{% block home %}
-{% endblock %}
-
-{% block upload %}
-{% endblock %}
-
-{% block profile %}
-{% endblock %}
-
-{% block logout %}
+{% block head %}
+<link type="text/css" rel="stylesheet" href="/static/css/logreg.css">
 {% endblock %}
 
 {% block body %}
