--- a/templates/feed.html
+++ b/templates/feed.html
@@ -1,24 +1,29 @@
-{% extends "master.html" %}
+{% extends "loggedin.html" %}
+
+{% block head %}
+<link type="text/css" rel="stylesheet" href="/static/css/upload.css">
+{% endblock %}
 
 {% block body %}
 
 <div class="container-fluid">
+
   
+  <!-- posts -->
   <div class="row">
-    <!--<div class="col-md-3"></div>-->
+    <div class="col-md-3"></div>
     <div class="col-md-6">
       {% for post in posts %}
       <img class="img-responsive" src={{ post['photo_link'] }}; alt="I tried"><br>
       by {{ post['author'] }} on {{ post['upload_date'] }}<br>
       <i>{{ post['caption'] }}<i><br>
 
-      <br><br>
-      {% endfor %}
+	  <br><br>
+	  {% endfor %}
     </div>
-    <!--<div class="col-md-3"></div>-->
+    <div class="col-md-3"></div>
   </div>
 
-  <!-- for the page numbers -->
   <div class="row">
     <div class="col-md-12">
       <a href="/page/{{ lastPage }}">{{ lastPage }}</a>
@@ -26,7 +31,64 @@
     </div>
   </div>
 
+  <!-- end of posts-->
+
 
   
+  <!-- modal stuff for upload button "popup" -->
+
+  
+  <div id="myModal" class="modal">
+    
+    <div class="modal-content">
+      
+      <span class="close">&times;</span>
+
+      <div id="file-things">
+	<label class="btn-default btn">
+	  <span id="file-label">Browse</span>
+	  <input class="file" id="noot" name="files[]" type="file" style="display: none;"/>
+	</label>
+	<br>
+	<img id="thatimage">
+      </div>
+      <br><br>
+      <form action="/upload" method="POST" id="datform">
+	<input id="lul" name="sneaky" type="hidden" value=""/>
+
+      </form>
+      <script src="/static/js/upload.js"></script>
+    </div>
+
+    <!-- end of modal stuff -->
+
+
+
+
+  
+</div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
 {% endblock %}
