--- a/templates/master.html
+++ b/templates/master.html
@@ -4,6 +4,9 @@
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap.css">
     <link type="text/css" rel="stylesheet" href="/static/css/logreg.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    {% block head %}
+    {% endblock %}
+    
     <title>{% block title %}{% endblock %}</title>
   </head>
 
@@ -20,30 +23,13 @@
 	<div class="collapse navbar-collapse" id="top-nav
 						  ">
 	  <ul class="nav navbar-nav">
-	    {% block home %}
-            <li><a href="/">Home</a></li>
-	    {% endblock %}
-	    {% block upload %}
-	    <li><a href="/upload">Upload</a></li>
+	    {% block leftnav %}
 	    {% endblock %}
 	  </ul>
 
 
 	  <ul class="nav navbar-nav navbar-right">
-	    <!--  search bar
-
-		  <form class="navbar-form navbar-left">
-		    <div class="form-group">
-		      <input type="text" class="form-control" placeholder="Search">
-		    </div>
-		    <button type="submit" class="btn btn-default">Submit</button>
-		  </form>
-		  -->
-	    {% block profile %}
-	    <li><a href="#">Profile</a></li>
-	    {% endblock %}
-	    {% block logout %}
-            <li><a href="/logout">Logout</a></li>
+	    {% block rightnav %}
 	    {% endblock %}
 	  </ul>
 
