fixed bad request issue in js

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -50,12 +50,11 @@
 	  <input class="file" id="noot" name="files[]" type="file" style="display: none;"/>
 	</label>
 	<br>
-	<img id="thatimage">
+	<img id="thatimage" class="img-responsive">
       </div>
       <br><br>
       <form action="/upload" method="POST" id="datform">
 	<input id="lul" name="sneaky" type="hidden" value=""/>
-
       </form>
       <script src="/static/js/upload.js"></script>
     </div>
