--- a/templates/loggedin.html
+++ b/templates/loggedin.html
@@ -6,6 +6,6 @@
 {% endblock %}
 
 {% block rightnav %}
-<li><a href="#">Profile</a></li>
+<li><a href="/myProfile">Profile</a></li>
 <li><a href="/logout">Logout</a></li>
 {% endblock %}
