--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,13 +1,26 @@
-<!DOCTYPE html>
-<html>
+{% extends "loggedin.html" %}
 
-<head>
-Temporary page for profile
-</head>
+{% block body %}
+<div class="container-fluid">
+  <h1>{{ username }}'s Profile</h1>
+  <hr>
 
-<body>
-This is someplace to land
-</body>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      {% for post in posts %}
+      <img class="img-responsive" src={{ post['photo_link'] }}; alt="I tried"><br>
+      by {{ post['author'] }} on {{ post['upload_date'] }}<br>
+      <i>{{ post['caption'] }}<i><br>
 
-</html>
+	  <br><br>
+	  {% endfor %}
+    </div>
+    <div class="col-md-3"></div>
+  </div>
 
+</div>
+
+
+
+{% endblock %}
