--- a/templates/master.html
+++ b/templates/master.html
@@ -20,8 +20,7 @@
 	</div>
 
 	<!-- Collect the nav links, forms, and other content for toggling -->
-	<div class="collapse navbar-collapse" id="top-nav
-						  ">
+	<div class="collapse navbar-collapse" id="top-nav ">
 	  <ul class="nav navbar-nav">
 	    {% block leftnav %}
 	    {% endblock %}
