--- a/templates/feed.html
+++ b/templates/feed.html
@@ -61,7 +61,7 @@
       <div id="file-things">
 	<label class="btn-default btn">
 	  <span id="file-label">Browse</span>
-	  <input class="file" id="noot" name="files[]" type="file" style="display: none;"/>
+	  <input class="file" id="noot" name="files[]" type="file" style="display: none;" accept="image/*"/>
 	</label>
 	<br>
 	<img id="thatimage" class="img-responsive">
