--- a/static/css/feed.css
+++ b/static/css/feed.css
@@ -1,6 +1,3 @@
-/* loading wheel for infinite scroll */
-
-
 /* for centering the loading wheel */
 .row {
     text-align: center;
@@ -10,6 +7,13 @@
     margin: 0 auto;
 }
 
+/*center the images */
+.img-responsive {
+    display: block;
+    margin: auto;
+}
+
+/* loading wheel */
 #loading-container { 
     text-align: center;
 }
@@ -18,13 +22,6 @@
     margin: 0 auto;
     display: none;
 }
-
-/*center the images */
-.img-responsive {
-    display: block;
-    margin: auto;
-}
-
 /* end of loading wheel */
 
 
