--- a/static/css/feed.css
+++ b/static/css/feed.css
@@ -18,7 +18,11 @@
 }
 
 #loading {
+    display: none;
     margin: 0 auto;
+}
+
+#profileLabel {
     display: none;
 }
 /* end of loading wheel */
