--- a/templates/feed.html
+++ b/templates/feed.html
@@ -36,18 +36,6 @@
   <div class="col-md-3"></div>
 </div>
 
-<div class="row">
-  <div class="col-md-12">
-    {% if not profile %}
-    <a href="/page/{{ lastPage }}">{{ lastPage }}</a>
-    <a href="/page/{{ nextPage }}">{{ nextPage }}</a>
-    {% else %}
-    <a href="/{{profile}}/{{ lastPage }}">{{ lastPage }}</a>
-    <a href="/{{profile}}/{{ nextPage }}">{{ nextPage }}</a>
-    {% endif %}
-  </div>
-</div>
-
 <!-- end of posts-->
 
 <!-- modal stuff for upload button "popup" -->
@@ -82,6 +70,7 @@
     <div id="loading">
       <img src="/static/img/loading.gif" alt="Loading...">
     </div>
+    <div id="profileLabel">{% if profile %}{{ profile }}{% endif %}</div>
   </div>
 </div>
 
