fixed upload time displayed on profile

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -22,7 +22,7 @@
   {% if ownprofile %}
   <b>Current Streak</b>: {{ info["streak"] }}<br>
   <b>Best Streak</b>:  {{ info["max_streak"] }}<br>
-  <b>Last Upload Time</b>: {{ info["last_upload"] }}<br>
+  <b>Last Upload Time</b>: {{ info["last_upload_formatted"] }}<br>
 
   {% endif %}
 
