flipped discover and home

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -108,10 +108,10 @@
   </div>
 </div>
 
-{% if not discover %}
+{% if not following %}
 <script src="/static/js/infinitescroll.js"></script>
 {% else %}
-<script src="/static/js/discoverscroll.js"></script>
+<script src="/static/js/followingscroll.js"></script>
 {% endif %}
 
 {% endblock %}
