--- a/templates/loggedin.html
+++ b/templates/loggedin.html
@@ -2,6 +2,7 @@
 
 {% block leftnav %}
 <li><a href="/">Home</a></li>
+<li><a href="/discover">Discover</a></li>
 {% if canPost %}
 <li id="upload-wrapper"><a id="upload" href="#">Upload</a></li>
 {% else %}
